# brand-builder-ai

./: .env  SYSTEM_AGENTS.md  _MASTER_MIGRATION_FIX.sql  db_push.cjs  debug_errors.txt  deploy_out.txt  eslint.config.js  implementation_plan_v3.md  implementation_plan_v4.md  index.html  migrate_new_db.mjs  migrate_output.txt  migrate_output_2.txt  old_generator.tsx  package-lock.json  package.json  patch-types.js  push_error.txt  push_output.txt  replace_generator.cjs  replace_generator.py  replace_squads.cjs  run_migrations_direct.cjs  run_migrations_direct.txt  supabase_results.txt  supabase_results_2.txt  system_architecture_for_ai.md  tailwind.config.ts  test_fetch.js  test_supa.js  test_supabase.js
docs/: AUDIT-REPORT.md  PRD.md  (+8 more)
simlab/: Dockerfile  README.md  pyproject.toml
simlab/simlab/: __init__.py  factory.py  main.py
simlab/simlab/api/: __init__.py  dependencies.py
simlab/simlab/api/routes/: __init__.py  health.py  simlab.py
simlab/simlab/core/: __init__.py  personas.py  prompts.py  qdrant_index.py  runtime.py  settings.py
simlab/simlab/models/: __init__.py  contracts.py
simlab/simlab/personas/: __init__.py  seed_personas.json
simlab/simlab/prompts/: __init__.py  insight_synthesizer.txt  persona_generation.txt  validate_character.txt  validate_content.txt  validate_journey.txt  validate_trend.txt
simlab/simlab/providers/: base.py  litellm_provider.py
simlab/simlab/repositories/: __init__.py  supabase.py
simlab/simlab/workers/: __init__.py  celery_app.py  tasks.py
simlab/tests/: test_app.py  test_contracts.py  test_personas.py
(+378 files in other folders)
