[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "simlab"
version = "0.1.0"
description = "SimLab synthetic validation microservice"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
  "pydantic>=2.8,<3",
  "pydantic-settings>=2.4,<3",
  "httpx>=0.27,<1",
  "celery>=5.4,<6",
  "redis>=5,<6",
  "qdrant-client>=1.10,<2",
  "litellm>=1.44,<2",
  "orjson>=3.10,<4",
  "tenacity>=8.5,<9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9",
  "pytest-asyncio>=0.23,<1",
  "anyio>=4,<5",
  "ruff>=0.6,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["simlab"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100

